crates/courier-ftp/src/app/vault/snapshots/courier_ftp__app__vault__snapshot_tests__first_run_keyring_checked@80x24.snap
---
source: crates/courier-ftp/src/app/vault/snapshot_tests.rs
expression: text
---
                                                                                
                                                                                
┌ Welcome to courier-ftp ──────────────────────────────────────────────────────┐
│courier-ftp keeps your sites, passwords, bookmarks, history and trusted keys  │
│encrypted on this machine. The master password is the only key; with sync it  │
│is also your account password.                                                │
│                                                                              │
│Master password   ••••••••••••••••••••••••••••••••                            │
│Confirm           ••••••••••••••••••••••••••••••••                            │
│                                                                              │
│Strength          █████ very strong                                           │
│                                                                              │
│[x] Also unlock with the system keyring on this device (it is also the only lo│
│                                                                              │
│There is no way to recover this password. If you forget it, your saved sites  │
│and passwords are lost unless you enable keyring unlock or sync with a        │
│recovery key.                                                                 │
│                                                                              │
│                                                                              │
│Tab next field · Space toggle · Enter create · Ctrl-n continue without vault  │
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
                                                                                
 – not connected │ 🔐  vault locked │ Type: Auto │ ⇅ off                         
--- styles ---
  2   0+80  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  3   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  3  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  4   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  4  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  5   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  5  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  6   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  6  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  7   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  7   1+18  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  7  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  8   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  8   1+18  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  8  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  9   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  9  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 10   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 10   1+18  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 10  19+17  Style::new().fg(Color::Indexed(2)).bg(Color::Reset).underline_color(Color::Reset)
 10  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 11   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 11  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 12   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 12   1+78  Style::new().fg(Color::Indexed(6)).bg(Color::Reset).underline_color(Color::Reset).bold()
 12  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 13   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 13  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 14   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 14   1+76  Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset)
 14  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 15   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 15   1+70  Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset)
 15  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 16   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 16   1+13  Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset)
 16  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 17   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 17  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 18   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 18  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 19   0+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 19   1+76  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 19  79+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 20   0+80  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 23   0+1   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
 23   1+15  Style::new().fg(Color::Indexed(246)).bg(Color::Indexed(236)).underline_color(Color::Reset)
 23  16+3   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
 23  19+1   Style::new().fg(Color::Indexed(0)).bg(Color::Indexed(6)).underline_color(Color::Reset)
 23  21+13  Style::new().fg(Color::Indexed(0)).bg(Color::Indexed(6)).underline_color(Color::Reset)
 23  34+46  Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
